--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -21,3 +21,136 @@ h1 { margin-top: 20px; }
 body > .container { margin-top: 30px; }
 
 #disqus_thread { margin-top: 20px; }
+
+
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro|Ubuntu+Mono);
+
+
+a:link, a:visited {
+  color: #777;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #666;
+}
+
+body {
+    font-family: "Source Sans Pro", sans-serif;
+    font-size: 16px;
+    line-height: 25px;
+    margin: 0;
+}
+
+h1 {
+    font-size: 51px;
+    line-height: 75px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
+h2 {
+    font-size: 38px;
+    line-height: 50px;
+    margin-top: 0px;
+    margin-bottom: 25px;
+}
+h3 {
+    font-size: 21px;
+    line-height: 25px;
+    margin-top: 25px;
+    margin-bottom: 0px;
+}
+p, ul {
+    margin-top: 0px;
+    margin-bottom: 25px;
+}
+small, aside {
+    font-size: 12px;
+}
+
+.title {
+  margin-left: 25px;
+}
+
+.blurbs {
+  position: absolute;
+  width: 350px;
+  right: 420px;
+  padding: 0 10px;
+  top: 0;
+  background: rgba(255, 255, 255, .7);
+}
+
+.invert {
+  background: #1f1f1f;
+  color: #dcdccc;
+}
+
+.invert h2, .invert h3 {
+  color: #7f9f7f;
+}
+
+.string, .regexp {
+  color: #f39;
+}
+
+.keyword {
+  color: #00c;
+}
+
+.comment {
+  color: #777;
+  font-style: oblique;
+}
+
+.number {
+  color: #369;
+}
+
+.class, .special {
+  color: #1181B8;
+}
+
+body > svg {
+  position: fixed;
+  z-index: -1;
+  width: 100%;
+}
+
+
+text {
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 14px;
+  pointer-events: none;
+}
+
+text.parent {
+  fill: #000;
+}
+
+circle {
+  fill: #555;
+  fill-opacity: .1;
+  stroke: white;
+  pointer-events: all;
+}
+
+circle:hover {
+  stroke: black;
+  stroke-width: .5px;
+}
+
+circle.parent {
+  fill: #818191;
+  fill-opacity: .1;
+  stroke: white;
+}
+
+circle.parent:hover {
+  stroke: black;
+  stroke-width: .5px;
+}
+
+circle.child {
+  pointer-events: all;
+}
